@@ -1325,6 +1325,8 @@ gtk_window_focus_in_event (GtkWidget     *widget,
    */
   if (GTK_WIDGET_VISIBLE (widget))
     {
+      window->window_has_focus = TRUE;
+      
       window = GTK_WINDOW (widget);
       if (window->focus_widget &&
 	  window->focus_widget != widget &&
@@ -1353,6 +1355,9 @@ gtk_window_focus_out_event (GtkWidget     *widget,
   g_return_val_if_fail (event != NULL, FALSE);
 
   window = GTK_WINDOW (widget);
+
+  window->window_has_focus = FALSE;
+  
   if (window->focus_widget &&
       window->focus_widget != widget &&
       GTK_WIDGET_HAS_FOCUS (window->focus_widget))
@@ -1459,10 +1464,6 @@ gtk_window_real_set_focus (GtkWindow *window,
   
   if (window->focus_widget)
     {
-      event.type = GDK_FOCUS_CHANGE;
-      event.window = window->focus_widget->window;
-      event.in = FALSE;
-      
       if (GTK_WIDGET_RECEIVES_DEFAULT (window->focus_widget) &&
 	  (window->focus_widget != window->default_widget))
         {
@@ -1471,18 +1472,21 @@ gtk_window_real_set_focus (GtkWindow *window,
 	  if (window->default_widget)
 	    GTK_WIDGET_SET_FLAGS (window->default_widget, GTK_HAS_DEFAULT);
         }
-	
-      gtk_widget_event (window->focus_widget, (GdkEvent*) &event);
+
+      if (window->window_has_focus)
+	{
+	  event.type = GDK_FOCUS_CHANGE;
+	  event.window = window->focus_widget->window;
+	  event.in = FALSE;
+	  
+	  gtk_widget_event (window->focus_widget, (GdkEvent*) &event);
+	}
     }
   
   window->focus_widget = focus;
   
   if (window->focus_widget)
     {
-      event.type = GDK_FOCUS_CHANGE;
-      event.window = window->focus_widget->window;
-      event.in = TRUE;
-
       if (GTK_WIDGET_RECEIVES_DEFAULT (window->focus_widget) &&
 	  (window->focus_widget != window->default_widget))
 	{
@@ -1493,7 +1497,14 @@ gtk_window_real_set_focus (GtkWindow *window,
 	    GTK_WIDGET_UNSET_FLAGS (window->default_widget, GTK_HAS_DEFAULT);
 	}
       
-      gtk_widget_event (window->focus_widget, (GdkEvent*) &event);
+      if (window->window_has_focus)
+	{
+	  event.type = GDK_FOCUS_CHANGE;
+	  event.window = window->focus_widget->window;
+	  event.in = TRUE;
+
+	  gtk_widget_event (window->focus_widget, (GdkEvent*) &event);
+	}
     }
   
   if (window->default_widget &&
